force-app/main/default/objects/Contact/fields/CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment__c</fullName>
    <description>Customer wealth segment</description>
    <inlineHelpText>Select the customer&apos;s wealth segment</inlineHelpText>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
                <default>true</default>
                <label>Retail</label>
            </value>
            <value>
                <fullName>Mass Affluent</fullName>
            </value>
            <value>
                <fullName>Emerging Affluent</fullName>
            </value>
            <value>
                <fullName>HNI</fullName>
            </value>
            <value>
                <fullName>Super HNI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>