force-app/main/default/objects/Contact/fields/OTP_Code__c.field-meta.xml
<CustomField>
    <fullName>OTP_Code__c</fullName>
    <label>OTP Code</label>
    <type>Text</type>
    <length>10</length>
</CustomField>