force-app/main/default/objects/Contact/fields/OTP_Expiry__c.field-meta.xml
<CustomField>
    <fullName>OTP_Expiry__c</fullName>
    <label>OTP Expiry</label>
    <type>DateTime</type>
</CustomField>