force-app/main/default/objects/Contact/fields/OTPVerified__c.field-meta.xml
<CustomField>
    <fullName>OTPVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Latest OTP verification status</description>
    <inlineHelpText>Indicates if last OTP was successfully verified</inlineHelpText>
    <label>OTP Verified</label>
    <type>Checkbox</type>
</CustomField>