force-app/main/default/objects/Contact/fields/RelationshipManager__c.field-meta.xml
<CustomField>
    <fullName>RelationshipManager__c</fullName>
    <description>Name of assigned Relationship Manager</description>
    <inlineHelpText>Enter the RM name assigned to this contact</inlineHelpText>
    <label>Relationship Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>