force-app/main/default/objects/Contact/fields/RMPhone__c.field-meta.xml
<CustomField>
    <fullName>RMPhone__c</fullName>
    <description>Relationship Manager&apos;s phone number</description>
    <inlineHelpText>Enter the RM&apos;s contact phone number</inlineHelpText>
    <label>RM Phone</label>
    <type>Phone</type>
</CustomField>