force-app/main/default/objects/Contact/fields/WhatsAppOptIn__c.field-meta.xml
<CustomField>
    <fullName>WhatsAppOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer opted in for WhatsApp communications</description>
    <inlineHelpText>Check if customer has opted in for WhatsApp banking</inlineHelpText>
    <label>WhatsApp Opt-In</label>
    <type>Checkbox</type>
</CustomField>